--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "mateli-backoffice",
+  "name": "react-redux-immutable-ddd",
   "version": "1.0.0",
-  "description": "Mateli Backoffice with React, Redux, Immutable, Postcss & more...",
+  "description": "React, Redux, Immutable, Postcss & more...",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "SET NODE_ENV=development&& webpack-dev-server --progress --inline --hot",
-    "build": "SET NODE_ENV=production&& webpack --progress --colors",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --host 0.0.0.0 --port 8081 --progress --inline --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --colors",
+    "start_win": "SET NODE_ENV=development&& webpack-dev-server --progress --inline --hot",
+    "build_win": "SET NODE_ENV=production&& webpack --progress --colors",
     "api": "json-server --watch db.json --port 3000",
     "mock": "start npm run api && npm start",
-    "test": "SET NODE_ENV=test&& mocha --compilers js:babel-register --recursive --require ./test/setup.js",
+    "test": "NODE_ENV=test&& mocha --compilers js:babel-register --recursive --require ./test/setup.js",
     "test-watch": "npm run test -- --watch --watch-extensions js"
   },
   "author": "",
@@ -16,9 +18,10 @@
   "dependencies": {
     "axios": "^0.11.1",
     "history": "^2.1.1",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
     "materialize-css": "^0.97.6",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
+    "react-materialize": "^0.15.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.0.0-rc5",
     "react-router-redux": "^4.0.4",
