--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start_win": "SET NODE_ENV=development&& webpack-dev-server --progress --inline --hot",
     "build_win": "SET NODE_ENV=production&& webpack --progress --colors",
     "api": "json-server --watch db.json --port 3000",
-    "mock": "start npm run api && npm start",
+    "mock": "npm start && npm run api",
     "test": "NODE_ENV=test&& mocha --compilers js:babel-register --recursive --require ./test/setup.js",
     "test-watch": "npm run test -- --watch --watch-extensions js"
   },
@@ -17,16 +17,18 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.11.1",
-    "history": "^2.1.1",
+    "history": "^2.1.2",
+    "immutable": "^3.8.1",
+    "materialize-css": "^0.97.6",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
-    "materialize-css": "^0.97.6",
-    "react-materialize": "^0.15.1",
+    "react-materialize": "^0.16.4",
     "react-redux": "^4.4.5",
-    "react-router": "^2.0.0-rc5",
+    "react-router": "^2.8.1",
     "react-router-redux": "^4.0.4",
     "redux": "^3.3.1",
     "redux-form": "^5.2.5",
+    "redux-immutablejs": "0.0.8",
     "redux-thunk": "^1.0.3"
   },
   "devDependencies": {
@@ -47,7 +49,6 @@
     "eslint-plugin-react": "^5.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.21.0",
-    "immutable": "^3.8.1",
     "jsdom": "^9.2.1",
     "json-server": "^0.8.14",
     "mocha": "^2.5.3",
@@ -57,7 +58,6 @@
     "postcss-loader": "^0.9.1",
     "postcss-modules-values": "^1.1.3",
     "precss": "^1.4.0",
-    "redux-immutablejs": "0.0.8",
     "redux-mock-store": "^1.1.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
