--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "React, Redux, Immutable, Postcss & more...",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --host 0.0.0.0 --port 8081 --progress --inline --hot",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --host 0.0.0.0 --port 8081 --progress --inline --hot &",
     "build": "cross-env NODE_ENV=production webpack --progress --colors",
     "start_win": "SET NODE_ENV=development&& webpack-dev-server --progress --inline --hot",
     "build_win": "SET NODE_ENV=production&& webpack --progress --colors",
-    "api": "json-server --watch db.json --port 3000",
+    "api": "json-server --watch db.json --port 3000 &",
     "mock": "npm start && npm run api",
-    "test": "NODE_ENV=test&& mocha --compilers js:babel-register --recursive --require ./test/setup.js",
+    "test": "cross-env NODE_ENV=test&& mocha --reporter spec app/**/*.spec.js --compilers js:babel-register --recursive --require ./app/test.js",
     "test-watch": "npm run test -- --watch --watch-extensions js"
   },
   "author": "",
@@ -45,11 +45,12 @@
     "chai": "^3.5.0",
     "chai-immutable": "^1.5.4",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.4.1",
     "eslint": "^2.10.2",
     "eslint-plugin-react": "^5.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.21.0",
-    "jsdom": "^9.2.1",
+    "jsdom": "^9.6.0",
     "json-server": "^0.8.14",
     "mocha": "^2.5.3",
     "postcss-cssnext": "^2.6.0",
@@ -59,6 +60,8 @@
     "postcss-modules-values": "^1.1.3",
     "precss": "^1.4.0",
     "redux-mock-store": "^1.1.0",
+    "sinon": "^1.17.6",
+    "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
