--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "history": "^2.1.2",
     "immutable": "^3.8.1",
     "materialize-css": "^0.97.6",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-materialize": "^0.16.4",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
@@ -43,6 +43,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-2": "^6.3.13",
     "chai": "^3.5.0",
+    "chai-enzyme": "^0.6.1",
     "chai-immutable": "^1.5.4",
     "css-loader": "^0.23.1",
     "enzyme": "^2.4.1",
@@ -59,6 +60,7 @@
     "postcss-loader": "^0.9.1",
     "postcss-modules-values": "^1.1.3",
     "precss": "^1.4.0",
+    "react-addons-test-utils": "^15.4.1",
     "redux-mock-store": "^1.1.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
