--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-redux-immutable-ddd",
   "version": "1.0.0",
-  "description": "React, Redux, Immutable, Postcss & more...",
+  "description": "React, Redux, Immutable, Sass & more...",
   "main": "webpack.config.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --host 0.0.0.0 --port 8081 --progress --inline --hot &",
@@ -45,26 +45,17 @@
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
     "chai-immutable": "^1.5.4",
-    "css-loader": "^0.23.1",
+    "cross-env": "^3.2.3",
     "enzyme": "^2.4.1",
     "eslint": "^2.10.2",
     "eslint-plugin-react": "^5.1.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.21.0",
     "jsdom": "^9.9.1",
     "json-server": "^0.8.14",
     "mocha": "^2.5.3",
-    "postcss-cssnext": "^2.6.0",
-    "postcss-functions": "^2.1.0",
-    "postcss-import": "^8.1.2",
-    "postcss-loader": "^0.9.1",
-    "postcss-modules-values": "^1.1.3",
-    "precss": "^1.4.0",
     "react-addons-test-utils": "^15.4.1",
     "redux-mock-store": "^1.1.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-stream": "^3.1.0"
